bug fix where trending drink was not visible

--- a/css/style.css
+++ b/css/style.css
@@ -277,11 +277,16 @@ a {
         flex-direction: column;
     }
 
-    .trending-drink {
+    .trending-drinks {
         flex-direction: column-reverse;
     }
 
     .trending__image {
+        width: 100%;
+        background-size: cover;
+    }
+
+    .trending__drinks {
         width: 100%;
         background-size: cover;
     }
